--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -34,7 +34,7 @@
             <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-lg-none">
-            <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
+            <a class="nav-link navegacion__contenido-link" href="index.html#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-lg-none">
             <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
@@ -47,8 +47,7 @@
               Mis trabajos
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="index.html#disenoux">Diseño UX</a>
-              <a class="dropdown-item" href="#">Diseño UI</a>
+              <a class="dropdown-item" href="index.html#trabajos">Diseño UX/UI</a>
               <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
               <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
             </div>
@@ -88,7 +87,7 @@
     <section class="experiencia">
       <div class="container">
         <div class="row">
-          <h1 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia">¿En donde he metido mano antes?</h1>
+          <h2 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia">¿En donde he metido mano antes?</h1>
           <div class="col-md-7 offset-md-1 experiencia__contenido">
             <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Nombre Trabajo</span> // <span class="experiencia__trabajo-rol">diseñador xx</span> <br>// <span class="experiencia__trabajo-duracion">2015-2016</span></h3>
             <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Nombre Trabajo</span> // <span class="experiencia__trabajo-rol">diseñador xx</span> <br>// <span class="experiencia__trabajo-duracion">2015-2016</span></h3>
@@ -115,7 +114,7 @@
             <div class="valores__elemento">
               <h3 class="articulo__subtitulo-1 texto__dark">// Nombre valor</h3>
               <p class="articulo__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, aliquam fugiat, quam et atque ea suscipit, eaque distinctio eveniet ab aut pariatur sit tenetur quidem consectetur beatae. Porro, beatae nam?</p>
-            </div>s
+            </div>
           </div>
         </div>
       </div>
@@ -125,7 +124,7 @@
     <section class="testimonio">
       <div class="container">
         <div class="row">
-          <h1 class="col-12 articulo__titulo testimonio__titulo">Testimonio</h1>
+          <h2 class="col-12 articulo__titulo testimonio__titulo">Testimonio</h1>
         </div>
         <div class="row">
           <p class="col-12 articulo__parrafo-1">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae veniam reprehenderit temporibus commodi dicta a praesentium accusamus atque illo sapiente cupiditate expedita consectetur non, porro asperiores tenetur Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur nibh a blandit rhoncus. Maecenas non consectetur lacus, eu congue magna. Quisque sed vulputate lectus, eget vehicula enim. Quisque turpis neque, scelerisque nec placerat in, scelerisque sed mi. Mauris malesuada ut libero eget vestibulum. Curabitur auctor quis orci sit amet tincidunt. Integer accumsan imperdiet nisl ut efficitur. Mauris ut varius ex. Proin sed pretium erat. Maecenas et pellentesque est. Sed imperdiet elit nec fringilla egestas. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur aliquam et mauris et condimentum. Sed sed aliquet massa. Cras mattis feugiat orci sit amet imperdiet. Proin elementum vitae nibh sit amet vulputate."</p>
