--- a/template__articulo.html
+++ b/template__articulo.html
@@ -101,7 +101,8 @@
         </div>
     </section>
     <section id="panel__contextoMovil" class="panel d-block d-lg-none articulo__info2">
-      <div class="container">
+      <div class="container-fluid">
+        <div class="composicion1__barraMenu fondo__dark"></div>
         <div class="row">
           <div class="col-12">
             <h3 class="articulo__info-titulo hero__subtitulo-1 texto__dark">Contexto</h3> <!--Se puede cambiar "contexto" por otro titulo que haga mas sentido-->
@@ -110,9 +111,26 @@
         </div>
       </div>
     </section>
-    <section id="primer__panel" class="panel articulo__info2">
-
+       <!--Seccion problema/metas-->
+    <section id="primer__panel" class="panel fondo__light">
+      <div class="container-fluid composicion1 fondo__light">
+        <div class="composicion1__barraMenu fondo__light"></div>
+        <div class="row">
+          <div class="col-md-3">
+            <h2 class="articulo__titulo">Titulo de la sección</h2>
+          </div>
+          <div class="col-md-8">
+            <p class="composicion1-cuerpoArticulo articulo__parrafo-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis consectetur impedit? Aliquid nesciunt aut culpa quisquam. Cum incidunt recusandae blanditiis eaque, harum voluptate velit atque, molestiae non ducimus laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium aliquam accusamus temporibus non in atque fugit labore est cum eos accusantium placeat enim quae ea explicabo corrupti, reprehenderit rerum! Dicta? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium doloribus quiaquia perferendis, amet vero facere consectetur, quos non ex necessitatibus tenetur deleniti quae dolore omnis obcaecati repellat cupiditate. Praesentium, rem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil rem sint, consectetur mollitia delectus unde, ad maxime nesciunt quod in asperiores debitis placeat eligendi reiciendis illum beatae quisquam animi. Ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni aliquid, rerum illo aliquam dolorem ut, debitis dicta magnam optio eum eveniet deleniti atque veritatis voluptatum molestiae! Consectetur dolore labore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tenetur accusamus, porro cumque iusto eius perferendis maiores eligendi sit atque hic at iure enim ratione nobis a! Aut, culpa dolorem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, consequuntur delectus sequi tempore autem omnis impedit? Maiores eveniet voluptatem asperiores ipsum consectetur beatae cum, vitae, minima saepe delectus, eligendi eaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam ea tempora, voluptates provident quam modi dolor doloremque sequi soluta nesciunt sapiente excepturi corrupti sed nulla vero? Sunt, voluptates sit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam perspiciatis excepturi fugit eius laboriosam officia quidem soluta nisi libero sunt? <span class="articulo__subtitulo-1 articulo__corteParrafo">Subtitulo de la seccion</span> <span class="parrafo-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, eligendi fugiat! Facilis quibusdam reiciendis et ipsam voluptatem delectus, enim sapiente fugiat aperiam dignissimos beatae temporibus ea neque tempore vel quae.</span></p>
+          </div>
+        </div>
+      </div>
     </section>
+
+ 
+    <section class="panel">
+    </section>
+    <!--Seccion problema solo-->
+    <!--Seccion Metas solas-->
 </div>
 
 </body>
