--- a/ilustracion.html
+++ b/ilustracion.html
@@ -34,7 +34,7 @@
           <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item d-lg-none">
-          <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
+          <a class="nav-link navegacion__contenido-link" href="index.html#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item d-lg-none">
           <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
@@ -47,8 +47,7 @@
             Mis trabajos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="index.html#disenoux">Diseño UX</a>
-            <a class="dropdown-item" href="#">Diseño UI</a>
+            <a class="dropdown-item" href="index.html#trabajos">Diseño UX/UI</a>
             <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
             <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
           </div>
