--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" defer></script>
-    <script src="assets/js/button-hover.js" defer></script>
     <!--js js js js js js js--> 
     <title>Thomas Heim | Diseño</title>
 </head>
@@ -34,7 +33,7 @@
             <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-lg-none">
-            <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
+            <a class="nav-link navegacion__contenido-link" href="#trabajos">Diseño UX<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-lg-none">
             <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
@@ -47,8 +46,7 @@
               Mis trabajos
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#disenoux">Diseño UX</a>
-              <a class="dropdown-item" href="#">Diseño UI</a>
+              <a class="dropdown-item" href="#trabajos">Diseño UX/UI</a>
               <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
               <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
             </div>
@@ -70,7 +68,7 @@
   <header class="panel__fijo panel hero">
     <div class="container-fluid hero__container">
       <div class="row">
-        <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom-hero1"><a href="https://www.google.cl">diseñador UX/UI</a></button></h1>
+        <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom-hero1"><a href="#trabajos">diseñador UX/UI</a></button></h1>
       </div>
       <div class="row hero__parrafo-2__container">
         <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom-hero2"><a href="ilustracion.html">Ilustrador</a></button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="diseno-grafico.html">diseñador gráfico</a></button></h1>
@@ -82,19 +80,20 @@
   <main id="trabajos" class="trabajos">
     <div class="container-fluid trabajos__container panel">
       <div class="row">
-        <button id="first" class="trabajos__boton boton__custom-trabajos" onmouseover="changeFirst(true)" onmouseout="changeFirst(false)"><a href="">Proyecto 1</a></button> 
+        <button id="ux__first" class="trabajos__boton boton__custom-trabajos"><a href="">Proyecto 1</a></button> 
       </div>
       <div class="row">
-        <button id="second" class="trabajos__boton boton__custom-trabajos" onmouseover="changeFirst(true)" onmouseout="changeFirst(false)"><a href="">Proyecto 2</a></button> 
+        <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="">Proyecto 2</a></button> 
       </div>
       <div class="row">
-        <button id="third" class="trabajos__boton boton__custom-trabajos"><a href="">Proyecto 3</a></button> 
+        <button id="ux__third" class="trabajos__boton boton__custom-trabajos bg__boton"><a href="">Proyecto 3</a></button> 
       </div>
       <div class="row">
-        <button id="fourth" class="trabajos__boton boton__custom-trabajos"><a href="">Proyecto 4</a></button> 
+        <button id="ux__fourth" class="trabajos__boton boton__custom-trabajos bg__boton"><a href="">Proyecto 4</a></button> 
       </div>
     </div>
   </main>   
 </div>
+<script src="assets/js/button-hover.js"></script>
 </body>
 </html>
