--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -17,7 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" defer></script>
-    <script src="assets/js/button-hover.js"></script>
+    <script src="assets/js/gallery-hover.js" defer></script>
     <!--js js js js js js js--> 
     <title>Thomas Heim | Diseño gráfico</title>
 </head>
@@ -80,7 +80,14 @@
 
     <!--ilustracion-->
     <section id="galeria" class="panel__galeria">
-      <button class="btn__invisible"><img src="assets/img/ilustracion1.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
+      <div id="disenoGraficoGaleria1" class="gallery__container">
+        <button class="btn__invisible"><img src="assets/img/ilustracion1.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
+        <div class="descripcion__wrapper">
+          <div id="descripcionBg1" class="descripcion__bg">
+            <h3 id="descripcionTexto1" class="descripcion__texto descripcion__titulo texto__dark">Nombre del trabajo</h3> 
+          </div>
+        </div>
+      </div>
       <button class="btn__invisible"><img src="assets/img/ilustracion2.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento2"></button>
       <button class="btn__invisible"><img src="assets/img/ilustracion3.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento3"></button>
       <button class="btn__invisible"><img src="assets/img/ilustracion4.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento4"></button>
