arreglo imagenes index
intento de arreglo del index metiendole un repo con display none, a ver si eso me soluciona que no me este cargando la carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -95,5 +95,11 @@
     </div>
   </main>   
 </div>
+<section class="img__repo d-none">
+  <img src="assets/img/ilustracion1.png">
+  <img src="assets/img/ilustracion2.png">
+  <img src="assets/img/ilustracion3.png">
+  <img src="assets/img/ilustracion4.png">
+</section>
 </body>
 </html>
