--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -78,7 +78,9 @@
   </div>
   </header>
 
-  <!--ilustracion-->
+
+
+  <!--GALERIA DESKTOP-->
   <section id="galeria" class="panel__galeria">
 
     <!--ELEMENTO 1-->
@@ -183,14 +185,22 @@
   </section>   
 </div>
 
-<!--MODALES-->
+<!--MODALES DESKTOP-->
 <div class="galeria__modales">
 
   <!--elemento 1-->
-  <div class="modal fade" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade modal-fullscreen-xl" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
         <div class="modal-body">
-          <div id="miCarrusel1" class="carousel slide" data-ride="carousel">
+          <img class="d-block w-100" src="assets/img/ilustracion1.png" alt="First slide">
+          <img class="d-block w-100" src="assets/img/ilustracion2.png" alt="Second slide">
+          <!--<div id="miCarrusel1" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/img/ilustracion1.png" alt="First slide">
@@ -210,8 +220,9 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-          </div>
+          </div>-->
         </div>
+      </div>
     </div>
   </div>
 
