--- a/ilustracion.html
+++ b/ilustracion.html
@@ -96,92 +96,202 @@
     <div class="galeria__modales">
 
       <!--elemento 1-->
-      <div class="modal fade" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion1.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion1.png" alt="First slide">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 2-->
-      <div class="modal fade" id="elemento2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento3-->
-      <div class="modal fade" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 4-->
-      <div class="modal fade" id="elemento4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion4.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion4.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 5-->
-      <div class="modal fade" id="elemento5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion5.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion5.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 6-->
-      <div class="modal fade" id="elemento6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion6.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion6.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 7-->
-      <div class="modal fade" id="elemento7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion7.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion7.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 8-->
-      <div class="modal fade" id="elemento8" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento8" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion8.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion8.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 9-->
-      <div class="modal fade" id="elemento9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion9.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion9.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!--elemento 10-->
-      <div class="modal fade" id="elemento10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade modal-fullscreen-xl" id="elemento10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion10.png" alt="Cronicas-del-estallido-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body modal__body-ilustracion">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion10.png" alt="Cronicas-del-estallido-1">
+              <div class="d-none d-md-block modal__imagen-informacion">
+                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 </body>
