--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -200,49 +200,43 @@
         <div class="modal-body">
           <img class="d-block w-100" src="assets/img/ilustracion1.png" alt="First slide">
           <img class="d-block w-100" src="assets/img/ilustracion2.png" alt="Second slide">
-          <!--<div id="miCarrusel1" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/img/ilustracion1.png" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="assets/img/ilustracion2.png" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="assets/img/ilustracion3.png" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#miCarrusel1" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#miCarrusel1" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>-->
         </div>
       </div>
     </div>
   </div>
 
   <!--elemento 2-->
-  <div class="modal fade" id="elemento2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade modal-fullscreen-xl" id="elemento2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-body">
-          <img class="modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
+        </div>
+      </div>
     </div>
   </div>
 
   <!--elemento3-->
-  <div class="modal fade" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade modal-fullscreen-xl" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-body">
-          <img class="modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
+        </div>
+      </div>
     </div>
   </div>
+
 
   <!--elemento 4-->
   <div class="modal fade" id="elemento4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
