--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -85,7 +85,7 @@
 
     <!--ELEMENTO 1-->
     <div id="disenoGraficoGaleria1" class="gallery__container">
-      <button class="btn__invisible"><img src="assets/img/ilustracion1.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
+      <button class="btn__invisible"><img src="assets/img/ilustraciones/cronicas-del-estallido-1.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
       <div class="descripcion__wrapper">
         <div id="descripcionBg1" class="descripcion__bg">
           <h3 id="descripcionTexto1" class="descripcion__texto descripcion__titulo texto__dark">Nombre del trabajo</h3> 
@@ -198,7 +198,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <img class="d-block w-100" src="assets/img/ilustracion1.png" alt="First slide">
+          <img class="d-block w-100" src="assets/img/ilustraciones/cronicas-del-estallido-1.png" alt="First slide">
           <img class="d-block w-100" src="assets/img/ilustracion2.png" alt="Second slide">
         </div>
       </div>
