--- a/ilustracion.html
+++ b/ilustracion.html
@@ -80,16 +80,16 @@
 
   <!--ilustracion-->
   <section id="galeria" class="panel__galeria">
-    <button class="btn__invisible"><img src="assets/img/ilustracion1.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/cronicas-del-estallido-1.png" alt="Cronicas del estallido" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion2.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento2"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion3.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento3"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion4.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento4"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/butterflies-sd.jpg" alt="Mariposas" class="img__btn" data-toggle="modal" data-target="#elemento4"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion5.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento5"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion6.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento6"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion7.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento7"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion8.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento8"></button>
     <button class="btn__invisible"><img src="assets/img/ilustracion9.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento9"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion10.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento10"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/hoodie-character-design-sd.png" alt="Hoodie character design" class="img__btn" data-toggle="modal" data-target="#elemento10"></button>
   </section>   
 </div>
     <!--MODALES-->
@@ -105,10 +105,17 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion1.png" alt="First slide">
               <div class="d-none d-md-block modal__imagen-informacion">
                 <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
                 <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              </div>
+              <div class="modal__imagenes">
+                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/FarynBLUE.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-2.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-3.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-4.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-5.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-6.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">              
               </div>
             </div>
           </div>
@@ -165,7 +172,7 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion4.png" alt="Cronicas-del-estallido-1">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustraciones/butterflies-sd.jpg" alt="Mariposas">
               <div class="d-none d-md-block modal__imagen-informacion">
                 <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
                 <h4 class="modales__subtitulo texto__dark">Cliente</h4>
@@ -285,10 +292,10 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion10.png" alt="Cronicas-del-estallido-1">
+              <img class="d-block h-100 modal__imagen" src="assets/img/ilustraciones/hoodie-character-design-sd.png" alt="Hoodie character design">
               <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+                <h4 class="modales__titulo texto__dark">Urbanwear<br><span class="modales__subtitulo">diseño de personaje</span></h4>
+                <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
               </div>
             </div>
           </div>
